added some animation for the next html path

--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -2,7 +2,7 @@
   <div class="about-me">
     <div class="about-me-headline-img">
       <div class="about-me-headline-text-img">
-        <div class="text-padding">
+        <div class="text-padding" #animatedElement>
           <h1>About me</h1>
           <p>I am a junior Front-end developer based in Wolfhalden, Switzerland, passionate about transforming creative
             concepts into engaging digital solutions. I enjoy collaborating with designers and companies to bring their
@@ -17,7 +17,7 @@
             <button (click)="scrollToElement('contact')">Let's talk</button>
           </div>
         </div>
-        <div class="about-me-img">
+        <div class="about-me-img" #animatedElement>
           <div class="img-with-border">
             <img src="assets/img/photo.JPG" alt="">
             <div class="img-border"></div>
