--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -25,7 +25,7 @@
         </div>
       </div>
     </div>
-    <div class="arrow-down" (click)="scrollToElement('mySkills')">
+    <div class="arrow-down" (click)="scrollToElement('mySkills')" #animatedElement>
       <div>
         <img src="assets/img/arrow-scroll-down-left.png" alt="" draggable="false">
       </div>
