--- a/src/app/portfolio/portfolio.component.scss
+++ b/src/app/portfolio/portfolio.component.scss
@@ -332,3 +332,34 @@
     }
   }
 }
+
+
+@keyframes slideInFromLeft {
+  from {
+    transform: translateX(-100%);
+    opacity: 0;
+  }
+  to {
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+
+@keyframes slideInFromRight {
+  from {
+    transform: translateX(100%);
+    opacity: 0;
+  }
+  to {
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+
+.animate-from-left {
+  animation: 500ms ease-out 0s 1 slideInFromLeft;
+}
+
+.animate-from-right {
+  animation: 500ms ease-out 0s 1 slideInFromRight;
+}
