made some animation changes

--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -35,7 +35,7 @@
   </div>
   <div class="arrow-down" (click)="scrollToElement('contact')">
     <div>
-      <img src="assets/img/arrow-scroll-down-left.png" alt="" draggable="false">
+      <img #arrowDown src="assets/img/arrow-scroll-down-left.png" alt="" draggable="false">
     </div>
   </div>
 </div>
