fixed some animation bug

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,12 +1,12 @@
 <div class="contact-section">
   <div class="contact-legal-notice">
     <div class="contact">
-      <h1>Say Hi!</h1>
-      <p class="contact-form-headline">Want to discuss a new project?</p>
-      <p class="contact-form-text">Feel free to reach out and share your ideas. Let's collaborate to bring them to life!
+      <h1 #animatedElement>Say Hi!</h1>
+      <p #animatedElement class="contact-form-headline">Want to discuss a new project?</p>
+      <p #animatedElement class="contact-form-text">Feel free to reach out and share your ideas. Let's collaborate to bring them to life!
       </p>
       <div class="contact-form">
-        <div class="form-input-container">
+        <div #animatedElement class="form-input-container">
           <img id="nameInputImg" src="assets/img/fullfilled.svg" alt="" class="hide">
           <label id="nameLabel">Your name</label>
           <input id="nameInput"
@@ -16,7 +16,7 @@
             type="text">
           <p id="requiredNameText" class="required-text-input hide">Please enter at least 2 characters.</p>
         </div>
-        <div class="form-input-container">
+        <div #animatedElement class="form-input-container">
           <img id="emailInputImg" src="assets/img/fullfilled.svg" alt="" class="hide">
           <label id="emailLabel">Your email</label>
           <input id="emailInput"
@@ -27,7 +27,7 @@
             type="email">
           <p id="requiredEmailText" class="required-text-input hide">Please enter a valid email address.</p>
         </div>
-        <div class="textarea-container">
+        <div #animatedElement class="textarea-container">
           <img id="textAreaImg" src="assets/img/fullfilled.svg" alt="" class="hide">
           <label id="textLabel" class="textarea-label">Your message</label>
           <textarea id="textArea" class="contact-message"
