--- a/src/app/portfolio/portfolio.component.scss
+++ b/src/app/portfolio/portfolio.component.scss
@@ -41,6 +41,7 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  overflow-y: hidden;
 
   .project {
     display: flex;
