--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -54,7 +54,7 @@
         }
       }
     }
-    h1{
+    h1 {
       width: fit-content;
       font-size: 78px;
       font-family: "Syne";
@@ -62,11 +62,11 @@
       margin: 0;
       margin-bottom: 48px;
       transition: ease-in-out 100ms;
-      &:hover{
+      &:hover {
         color: #5988ff;
       }
     }
-    p{
+    p {
       margin: 0;
       font-size: 23px;
       font-family: "Overpass";
@@ -96,7 +96,8 @@
       height: 546.4px;
       width: 416px;
       border: 4px solid transparent;
-      transition: border-color 150ms ease-in-out, top 150ms ease-in-out, right 150ms ease-in-out;
+      transition: border-color 150ms ease-in-out, top 150ms ease-in-out,
+        right 150ms ease-in-out;
 
       &:hover {
         border-color: #000;
@@ -122,11 +123,12 @@
       cursor: pointer;
       object-fit: cover;
       margin-right: 140px;
+    }
   }
 }
-}
 
-.text-padding, .about-me-img {
+.text-padding,
+.about-me-img {
   opacity: 0;
   transform: scale(0);
   transition: opacity 1s, transform 1s;
@@ -154,75 +156,126 @@
   transform: translateX(0);
 }
 
-@media (max-width: 1230px) {
+@media (max-width: 1369px) {
+  .about-me-headline-text-img {
+    .text-padding {
+      padding-right: 20px;
+    }
+  }
+}
+
+@media (max-width: 1440px) {
   .about-me-headline-text-img {
     div {
       h1 {
-        font-size: 60px;
+        margin-bottom: 20px;
+        font-size: 55px;
       }
       p {
         font-size: 18px;
       }
     }
   }
-}
 
-@media (max-width: 1090px) {
-  .about-me-headline-text-img {
-    div {
-      h1 {
-        font-size: 50px;
-      }
-      p {
-        font-size: 18px;
-      }
+  .img-border {
+    display: none !important;
+  }
+
+  .img-with-border {
+    img {
+      height: 454.4px !important;
+      width: 341px !important;
     }
+  }
+
+  .arrow-down {
+    height: 15%;
   }
 }
 
 @media (max-width: 1000px) {
+  .about-me {
+    height: fit-content;
+  }
   .about-me-headline-text-img {
     flex-direction: column;
     div {
-      div {
-        margin-top: 0px;
-      }
+        div {
+          display: flex;
+          justify-content: center;
+          margin-top: 16px;
+        }
       h1 {
-        font-size: 50px;
-        text-align: center;
+        margin-top: 100px;
       }
       p {
-        font-size: 18px;
+
+      }
+    }
+    .text-padding {
+      padding-right: 0px;
+      height: 50%;
+      button {
+        display: none !important;
       }
     }
   }
 
-  .text-padding {
-    padding-right: 0px !important;
+  .about-me-img {
+    height: 50%;
     display: flex;
-    flex-direction: column;
-    align-items: center;
     justify-content: center;
-    button {
-      display: none;
-    }
+    align-items: flex-start;
   }
 
   .img-with-border {
-    margin-top: 0px !important;
     img {
       margin-left: 0px !important;
       margin-bottom: 0px !important;
     }
   }
 
-  .about-me-img {
-    width: fit-content;
-    display: block;
-    height: fit-content;
-  }
-
   .img-border {
     display: none !important;
   }
+
 }
+
+@media (max-width: 561px) {
+  .about-me-headline-text-img {
+    flex-direction: column;
+    div {
+        div {
+          display: flex;
+          justify-content: center;
+          margin-top: 16px;
+        }
+      h1 {
+        margin-top: 100px;
+        font-size: 30px;
+      }
+      p {
+        font-size: 16px;
+      }
+    }
+    .text-padding {
+      padding-right: 0px;
+      height: 50%;
+      button {
+        display: none !important;
+      }
+    }
+  }
+
+  .arrow-down {
+    div {
+      img {
+        margin-top: 20px;
+        margin-right: 0px;
+        width: 120px;
+        height: 120px;
+      }
+    }
+  }
+}
+
