--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -1,5 +1,5 @@
 .about-me-section {
-  height: 100vh;
+  min-height: 100vh;
   -moz-user-select: none;
   -webkit-user-select: none;
   -ms-user-select: none;
@@ -207,9 +207,6 @@
         }
       h1 {
         margin-top: 100px;
-      }
-      p {
-
       }
     }
     .text-padding {
