--- a/src/app/my-skills/my-skills.component.scss
+++ b/src/app/my-skills/my-skills.component.scss
@@ -1,5 +1,4 @@
 .my-skills-section {
-  min-height: 100vh;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -15,7 +14,7 @@
   }
 
   .my-skills-container {
-    margin-top: 32px;
+    margin-top: 132px;
     margin-left: 32px;
     margin-right: 32px;
     max-width: 1239px;
@@ -139,6 +138,11 @@
   transition: transform 1s ease-in-out;
 }
 
+@media (max-width: 1239px) {
+  .arrow-down {
+    width: 100%;
+  }
+}
 
 @media (max-width: 660px) {
   .my-skills-container {
@@ -147,6 +151,15 @@
         font-size: 30px !important;
         top: -23px !important;
       }
+    }
+  }
+
+  .arrow-down {
+    width: 100%;
+    img {
+      margin-left: 30px !important;
+      width: 120px;
+      height: 120px;
     }
   }
 }
