portfolio is now responsive

--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -19,7 +19,7 @@
         </div>
         <div class="about-me-img" #animatedElement>
           <div class="img-with-border">
-            <img src="assets/img/photo.JPG" alt="">
+            <img src="assets/img/photo.jpg" alt="">
             <div class="img-border"></div>
           </div>
         </div>
