--- a/src/app/portfolio/portfolio.component.scss
+++ b/src/app/portfolio/portfolio.component.scss
@@ -11,7 +11,7 @@
 }
 
 .portfolio-headline {
-  width: 1239px;
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
