--- a/src/app/title/title.component.scss
+++ b/src/app/title/title.component.scss
@@ -124,7 +124,7 @@
 
 @keyframes slideInFromLeft {
   0% {
-    transform: translateX(-100%);
+    transform: translateX(-40%);
     opacity: 0;
   }
   100% {
@@ -135,7 +135,7 @@
 
 @keyframes slideInFromRight {
   0% {
-    transform: translateX(150%);
+    transform: translateX(50%);
     opacity: 0;
   }
   100% {
@@ -200,6 +200,7 @@
 
 @media (max-width: 650px) {
   .title-headline {
+    width: 100%;
     h1 {
       font-size: 50px;
     }
