--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -553,6 +553,44 @@
   }
 }
 
+@media (max-width: 1000px) {
+  .legal-notice-container {
+    position: fixed;
+    overflow: auto;
+    z-index: 9;
+    bottom: 0;
+    width: 100%;
+    height: 100vh;
+    background: #fffcf3;
+    transform: translateY(100%);
+    font-family: "Overpass";
+    transition: transform 400ms ease-out;
+    p {
+      text-align: justify;
+    }
+
+    h1 {
+      margin-left: 20px;
+      margin-right: 20px;
+    }
+
+    h2 {
+      margin-left: 30px;
+      margin-right: 30px;
+    }
+
+    h3 {
+      margin-left: 40px;
+      margin-right: 40px;
+    }
+
+    ul {
+      margin-left: 30px;
+      margin-right: 30px;
+    }
+  }
+}
+
 
 @media (max-width: 800px) {
 
